--- a/to-do-list/package.json
+++ b/to-do-list/package.json
@@ -11,5 +11,9 @@
     "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.0"
   }
 }
