feature(package.json): material-ui 설치

--- a/to-do-list/package.json
+++ b/to-do-list/package.json
@@ -4,13 +4,27 @@
   "main": "index.js",
   "author": "soopark",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon server",
+    "build": "next build",
+    "start": "cross-env NODE_ENV=production nodemon server"
+  },
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "cross-env": "^5.2.0",
     "express": "^4.17.0",
+    "fs": "^0.0.1-security",
+    "jss": "^9.8.7",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.4",
     "next": "^8.1.0",
+    "nodemon": "^1.19.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-jss": "^8.6.1",
+    "react-lines-ellipsis": "^0.14.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.1.0",
